<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_name">Jaldhar H. Vyas</string>
    <string name="company_name">Consolidated Braincells Inc.</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_bigger">Build It Bigger</string>
    <string name="material">Make Your \nApp Material</string>
    <string name="ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
