<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="fill_vertical" />
    </TableRow>

    <TableRow android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnMovies"
            style="@style/leftButton"
            android:text="@string/popular_movies"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/btnStock"
            style="@style/rightButton"
            android:text="@string/stock_hawk"
            android:onClick="onButtonClick" />
    </TableRow>

    <TableRow android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnBigger"
            style="@style/leftButton"
            android:text="@string/build_bigger"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/btnMaterial"
            style="@style/rightButton"
            android:text="@string/material"
            android:onClick="onButtonClick" />
    </TableRow>

    <TableRow android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btnUbiquitous"
            style="@style/leftButton"
            android:text="@string/ubiquitous"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/btnCapstone"
            style="@style/rightButton"
            android:text="@string/capstone"
            android:onClick="onButtonClick" />
    </TableRow>

    <TableRow android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="fill_vertical" />
    </TableRow>
</TableLayout>
